# TIL-ax-multi-agent

ai-backend-integration-python/: README.md  pyproject.toml
ai-backend-integration-python/app/: dependencies.py  errors.py  main.py  middleware.py  schemas.py
ai-backend-integration-python/app/routers/: chat_crew.py  chat_langchain.py
ai-backend-integration-spring/: build.gradle  settings.gradle
ai-backend-integration-spring/src/main/java/com/sesac/aibackendintegrationspring/: AiBackendIntegrationSpringApplication.java
ai-backend-integration-spring/src/main/java/com/sesac/aibackendintegrationspring/config/: AppConfig.java  CorsConfig.java  DataInitializer.java  SwaggerConfig.java
ai-backend-integration-spring/src/main/java/com/sesac/aibackendintegrationspring/controller/: AuthController.java  ChatLogController.java  GreetingController.java  HealthController.java  ItemController.java  LegacyItemController.java  RegionController.java  UserController.java  UserInfoController.java
ai-backend-integration-spring/src/main/java/com/sesac/aibackendintegrationspring/domain/: ChatLog.java  Department.java  Employee.java  Item.java  Region.java  Role.java  User.java
ai-backend-integration-spring/src/main/java/com/sesac/aibackendintegrationspring/dto/: ChatLogRequest.java  ChatLogResponse.java  ItemRequest.java  ItemResponse.java  LoginRequest.java  RegionRequest.java  (+4 more)
ai-backend-integration-spring/src/main/resources/: application.yaml
ai-backend-integration-spring/src/test/java/com/sesac/aibackendintegrationspring/: AiBackendIntegrationSpringApplicationTests.java
(+19 files in other folders)
